<?xml version="1.0"?>
<package format="3">
  <name>jog_teleop</name>
  <version>0.0.1</version>
  <description>Examples of teleop tools using jog</description>

  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>