<?xml version="1.0"?>
<package format="3">
  <name>jog_teleop</name>
  <version>0.0.1</version>
  <description>Examples of teleop tools using jog</description>

  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>jog_msgs</depend>
  <depend>joy</depend>

</package>